tests/error/type_errors/fun_ty_mismatch_1.err
Guppy compilation failed. Error in file $FILE:11

9:         return x > 0
10:    
11:    return bar
              ^^^
GuppyTypeError: Expected return value of type `int -> int`, got `int -> bool`
